--- a/weather-api/index.html
+++ b/weather-api/index.html
@@ -90,11 +90,9 @@
   const getWeatherForecast = async (cityName) => {
     try {
       const response = await fetch(`https://api.asaromi.biz.id/api/weather/${cityName}`);
-      const data = await response.json();
-      console.log(data);
+      const { data } = await response.json();
       return data;
     } catch (error) {
-      console.log(error);
       return null;
     }
   }
